blog/static/blog/main.css
body{
    background: #fafafa;
}

.alert-light{
    border: 1px solid #ddd;
    border-radius: 8px;
    padding: 20px;
}

.nav-link.active {
    font-weight: bold;
    background-color: rgba(255, 255, 255, 0.1);
    border-radius: 5px;
}


.form-register {
    padding: 20px;
    background: #fafafa;
    border: 1px solid silver;
    margin-top: 20px;
}

.form-register .helptext {color: #b7b7b7;}
.form-register ul.errorlist{
    color: #ca5858;
    font-weight: bold;
}

.form-register.auth input, .form-register.auth textarea{
    display: block;
    width: 96%;
    margin-top: 5px;
    border: 1px solid silver;
    border-radius: 5px;
    padding: 2%;
}


footer{
    width: 70%;
    margin-left: 15%;
}

@media (max-width: 768px) {
    .sidebar {
        margin-top: 1rem;
    }
}

